# src/main/java/com/ng/crud/model/Event.java
@@ -1,46 +1,34 @@
 package com.ng.crud.model;
-/*
- * expo CRUD
- * expo CRUD
- *
- * OpenAPI spec version: v1
- * 
- *
- * NOTE: This class is auto generated by the swagger code generator program.
- * https://github.com/swagger-api/swagger-codegen.git
- * Do not edit the class manually.
- */
-
 import java.util.Objects;
-import java.util.Arrays;
-import com.google.gson.TypeAdapter;
-import com.google.gson.annotations.JsonAdapter;
-import com.google.gson.annotations.SerializedName;
-import com.google.gson.stream.JsonReader;
-import com.google.gson.stream.JsonWriter;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-import java.io.IOException;
 import org.threeten.bp.OffsetDateTime;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
 
 /**
  * Event
  */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaClientCodegen", date = "2019-02-07T18:25:37.970Z")
-public class Event {
-  @SerializedName("id")
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-02-08T15:10:35.680Z")
+
+public class Event   {
+  @JsonProperty("id")
   private Long id = null;
 
-  @SerializedName("name")
+  @JsonProperty("Name")
   private String name = null;
 
-  @SerializedName("desc")
+  @JsonProperty("Desc")
   private String desc = null;
 
-  @SerializedName("Place")
+  @JsonProperty("Place")
   private String place = null;
 
-  @SerializedName("Date")
+  @JsonProperty("Date")
   private OffsetDateTime date = null;
 
   public Event id(Long id) {
@@ -48,11 +36,13 @@ public class Event {
     return this;
   }
 
-   /**
+  /**
    * Get id
    * @return id
   **/
   @ApiModelProperty(value = "")
+
+
   public Long getId() {
     return id;
   }
@@ -66,11 +56,13 @@ public class Event {
     return this;
   }
 
-   /**
+  /**
    * Get name
    * @return name
   **/
   @ApiModelProperty(value = "")
+
+
   public String getName() {
     return name;
   }
@@ -84,11 +76,13 @@ public class Event {
     return this;
   }
 
-   /**
+  /**
    * Get desc
    * @return desc
   **/
   @ApiModelProperty(value = "")
+
+
   public String getDesc() {
     return desc;
   }
@@ -102,11 +96,13 @@ public class Event {
     return this;
   }
 
-   /**
+  /**
    * Get place
    * @return place
   **/
   @ApiModelProperty(value = "")
+
+
   public String getPlace() {
     return place;
   }
@@ -120,11 +116,14 @@ public class Event {
     return this;
   }
 
-   /**
+  /**
    * Get date
    * @return date
   **/
   @ApiModelProperty(value = "")
+
+  @Valid
+
   public OffsetDateTime getDate() {
     return date;
   }
@@ -155,7 +154,6 @@ public class Event {
     return Objects.hash(id, name, desc, place, date);
   }
 
-
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
@@ -180,5 +178,4 @@ public class Event {
     }
     return o.toString().replace("\n", "\n    ");
   }
-
 }
